--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "next-themes": "0.0.15",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-reveal": "^1.2.2",
+    "react-rewards": "^2.0.3",
     "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
+    "react-use": "^17.3.2",
     "tailwindcss": "^2.2.7"
   }
 }
